Add gitignore, DVC config, and documented project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
-"credit_scoring_env/" 
-"__pycache__/" 
-".dvc/" 
-"data/" 
-"mlruns/" 
-"*.pyc" 
-".DS_Store" 
+# Virtual environment
+credit_scoring_env/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# OS files
+.DS_Store
+desktop.ini
+
+# MLflow
+mlruns/
+
+# DVC local cache (DO NOT ignore .dvc/)
+dvc_storage/
